# LSPlantPro

./: .gitignore  PATCHES.md  README.md  README_EN.md
repo/com/vapro/lsplant/lsplant-pro/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
repo/com/vapro/lsplant/lsplant-pro/1.0.0/: lsplant-pro-1.0.0.aar.md5  lsplant-pro-1.0.0.aar.sha1  lsplant-pro-1.0.0.aar.sha256  lsplant-pro-1.0.0.aar.sha512  lsplant-pro-1.0.0.module  lsplant-pro-1.0.0.module.md5  lsplant-pro-1.0.0.module.sha1  lsplant-pro-1.0.0.module.sha256  lsplant-pro-1.0.0.module.sha512  lsplant-pro-1.0.0.pom  lsplant-pro-1.0.0.pom.md5  lsplant-pro-1.0.0.pom.sha1  lsplant-pro-1.0.0.pom.sha256  lsplant-pro-1.0.0.pom.sha512
src/lsplant-module/: build.gradle.kts  consumer-rules.pro
src/lsplant-module/src/main/cpp/lsplant/: CMakeLists.txt  lsplant.cc
src/lsplant-module/src/main/cpp/lsplant/art/runtime/: dex_file.cxx  instrumentation.cxx
